# Secure-Login-System

./: .gitignore  .gitignore.save  Argon2Hash.cpp  Argon2Hash.h  CMakeLists.txt  CustomHash.cpp  Encryption.cpp  Encryption.h  PasswordManager.cpp  PasswordManager.h  README.md  ceasar_cipher  ceasar_cipher.cpp  existing_user.cpp  existing_user.h  forgot_password.cpp  main.cpp  new_user.cpp  otp.cpp  otp.h  otp_generation.cpp  test2_aws_sdk.cpp  test3_aws_sdk.cpp  test_aws_sdk.cpp  utilities.cpp  utilities.h  vigenère_cipher.cpp
auth/: existing_user.cpp  new_user.cpp  new_user.h
encryptions/: ceasar_cipher.cpp  vigenère_cipher  vigenère_cipher.cpp
hashing/: CustomHash.cpp  CustomHash.h
other_features/: PasswordManager.cpp  forgot_password.h  otp.cpp  otp.h
